--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,9 +61,9 @@ pipeline {
       // }
       steps {
         dir('terraform') {
-          // withCredentials([
-          //   sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')
-          //   ]) {
+          withCredentials([
+            sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')
+            ]) {
             sh '''
               cp "$JENKINS_PRIV_KEY" id_ed25519
               echo "$JENKINS_PUB_KEY" > id_ed25519.pub
