--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -73,16 +73,16 @@ pipeline {
       }
     }
 
-//     stage('setup terraform endpoints') {
-//       steps {
-//         script {
-//           def minioIp = sh(script: "getent hosts minio | awk '{ print \$1 }'", returnStdout: true).trim()
-//           env.MINIO_URL = minioIp
-//           def xoaIp = sh(script: "getent hosts xen-orchestra | awk '{ print \$1 }'", returnStdout: true).trim()
-//           env.XOA_IP = xoaIp
-//         }
-//       }
-//     }
+    stage('setup terraform endpoints') {
+      steps {
+        script {
+          def minioIp = sh(script: "getent hosts minio | awk '{ print \$1 }'", returnStdout: true).trim()
+          env.MINIO_URL = minioIp
+          def xoaIp = sh(script: "getent hosts xen-orchestra | awk '{ print \$1 }'", returnStdout: true).trim()
+          env.XOA_IP = xoaIp
+        }
+      }
+    }
   
 //     stage('init') {
 //       agent {
