--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -84,21 +84,21 @@ pipeline {
       }
     }
   
-//     stage('init') {
-//       agent {
-//         docker {
-//           image 'hashicorp/terraform:1.11.4'
-//           args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
-//         }
-//       }
-//       steps {
-//         dir('terraform'){
-//         sh '''
-//           terraform init -no-color
-//         '''
-//         }
-//       }
-//     }
+    stage('init') {
+      agent {
+        docker {
+          image 'hashicorp/terraform:1.11.4'
+          args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
+        }
+      }
+      steps {
+        dir('terraform'){
+        sh '''
+          terraform init -no-color
+        '''
+        }
+      }
+    }
   
 //     stage('plan') {
 //       agent {
