--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+# version: '3.1'
 
 services:
   jenkins:
@@ -49,9 +49,8 @@ services:
       - jenkins-docker-certs:/certs/client
       - jenkins-data:/var/jenkins_home
       - docker-cache:/var/lib/docker
-
   minio:
-    image: quay.io/minio/minio:RELEASE.2025-04-22T22-12-26Z
+    image: quay.io/minio/minio:RELEASE.2025-04-22T22-12-26Z # Mantenha sua versão ou atualize conforme necessário
     restart: always
     command:
       - server
@@ -59,18 +58,33 @@ services:
       - --console-address
       - ":9001"
     ports:
-      - 9000:9000
-      - 9001:9001
+      - "9000:9000"
+      - "9001:9001"
     networks:
       docker:
-        aliases: 
+        aliases:
           - minio
     volumes:
       - minio_data:/data
     environment:
       - MINIO_ROOT_USER=root
       - MINIO_ROOT_PASSWORD=rootroot
-      - MINIO_DEFAULT_BUCKETS=root
+      # - MINIO_DEFAULT_BUCKETS= # Removido para controle explícito via mc_setup
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+  mc_setup:
+    image: quay.io/minio/mc:RELEASE.2025-03-12T17-29-24Z
+    depends_on:
+      minio:
+        condition: service_healthy
+    networks:
+      docker: null
+    volumes:
+      - ./minio/mc_setup.sh:/mc_setup.sh:ro
+    entrypoint: ["/bin/sh", "/mc_setup.sh"]
 
   xen-orchestra:
     build:
