--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -100,47 +100,47 @@ pipeline {
       }
     }
   
-//     stage('plan') {
-//       agent {
-//         docker {
-//           image 'hashicorp/terraform:1.11.4'
-//           args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
-//         }
-//       }
-//       steps {
-//         dir('terraform'){
-//         sh '''
-//           terraform plan -no-color
-//         '''
-//         }
-//       }
-//       when {
-//         expression {
-//           params.CREATE_OR_DESTROY == "Create"
-//         }
-//       }
-//     }
+    stage('plan') {
+      agent {
+        docker {
+          image 'hashicorp/terraform:1.11.4'
+          args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
+        }
+      }
+      steps {
+        dir('terraform'){
+        sh '''
+          terraform plan -no-color
+        '''
+        }
+      }
+      when {
+        expression {
+          params.CREATE_OR_DESTROY == "Create"
+        }
+      }
+    }
 
-//     stage('apply') {
-//       agent {
-//         docker {
-//           image 'hashicorp/terraform:1.11.4'
-//           args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
-//         }
-//       }
-//       steps {
-//         dir('terraform'){
-//         sh '''
-//           terraform apply -no-color -auto-approve
-//         '''
-//         }
-//       }
-//       when {
-//         expression {
-//           params.CREATE_OR_DESTROY == "Create"
-//         }
-//       }
-//     }
+    stage('apply') {
+      agent {
+        docker {
+          image 'hashicorp/terraform:1.11.4'
+          args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
+        }
+      }
+      steps {
+        dir('terraform'){
+        sh '''
+          terraform apply -no-color -auto-approve
+        '''
+        }
+      }
+      when {
+        expression {
+          params.CREATE_OR_DESTROY == "Create"
+        }
+      }
+    }
 
 //     // stage('kubespray') {
 //     //   agent {
@@ -171,26 +171,26 @@ pipeline {
 //     //   }
 //     // }
 
-//     stage('destroy') {
-//       agent {
-//         docker {
-//           image 'hashicorp/terraform:1.11.4'
-//           args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
-//         }
-//       }
-//       steps {
-//         dir('terraform') {
-//           sh '''
-//             terraform apply -destroy -no-color -auto-approve
-//           '''
-//         }
-//       }
-//       when {
-//         expression {
-//           params.CREATE_OR_DESTROY == "Destroy"
-//         }
-//       }
-//     }
+    stage('destroy') {
+      agent {
+        docker {
+          image 'hashicorp/terraform:1.11.4'
+          args "--entrypoint= --add-host minio:${env.MINIO_URL} --add-host xen-orchestra:${env.XOA_IP}"
+        }
+      }
+      steps {
+        dir('terraform') {
+          sh '''
+            terraform apply -destroy -no-color -auto-approve
+          '''
+        }
+      }
+      when {
+        expression {
+          params.CREATE_OR_DESTROY == "Destroy"
+        }
+      }
+    }
 
 }
 } 
