--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       context: jenkins/
     restart: always
     environment:
-      - JENKINS_ADMIN_PASSWORD=admin
+      - JENKINS_ADMIN_USER=${JENKINS_ADMIN_USER}
+      - JENKINS_ADMIN_PASSWORD=${JENKINS_ADMIN_PASSWORD}
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
@@ -67,9 +68,8 @@ services:
     volumes:
       - minio_data:/data
     environment:
-      - MINIO_ROOT_USER=root
-      - MINIO_ROOT_PASSWORD=rootroot
-      # - MINIO_DEFAULT_BUCKETS= # Removido para controle explícito via mc_setup
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
@@ -84,6 +84,9 @@ services:
       docker: null
     volumes:
       - ./minio/mc_setup.sh:/mc_setup.sh:ro
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     entrypoint: ["/bin/sh", "/mc_setup.sh"]
 
   xen-orchestra:
