--- a/jenkins/jenkins/casc.yaml
+++ b/jenkins/jenkins/casc.yaml
@@ -62,24 +62,24 @@ credentials:
               privateKeySource:
                 directEntry:
                   privateKey: "${readFile:${SSH_PRIVATE_KEY}}" 
-jobs:
-  - script: >
-      folder('testjobs')
-  - script: >
-      pipelineJob('testjobs/default-agent') {
-        definition {
-          cps {
-            script("""\
-              pipeline {
-                agent any
-                stages {
-                  stage ('test') {
-                    steps {
-                      echo "hello"
-                    }
-                  }
-                }
-              }""".stripIndent())
-          }
-        }
-      }
+# jobs:
+#   - script: >
+#       folder('testjobs')
+#   - script: >
+#       pipelineJob('testjobs/default-agent') {
+#         definition {
+#           cps {
+#             script("""\
+#               pipeline {
+#                 agent any
+#                 stages {
+#                   stage ('test') {
+#                     steps {
+#                       echo "hello"
+#                     }
+#                   }
+#                 }
+#               }""".stripIndent())
+#           }
+#         }
+#       }
