--- a/jenkins/xen-orchestra/Dockerfile
+++ b/jenkins/xen-orchestra/Dockerfile
@@ -4,7 +4,11 @@ FROM ronivay/xen-orchestra:latest
 # Switch to root to install dependencies
 USER root
 
+# Install xen orchestrs command line (xo-cli)
 RUN npm install --global xo-cli
+
+# Install jq
+RUN apt update && apt install jq -y
 
 
 
