--- a/jenkins/.env
+++ b/jenkins/.env
@@ -1,8 +1,8 @@
 XCP_MASTER_IP=192.168.1.10
 XCP_USER=root
 XCP_PASSWORD=m3gaFox50
-XOA_USER=admin@admin.net
-XOA_PASSWORD=admin
+XOA_USER=admin
+XOA_PASSWORD=m3gaFox50
 JENKINS_ADMIN_USER=admin
 JENKINS_ADMIN_PASSWORD=m3gaFox50
 MINIO_ROOT_USER=root
