--- a/jenkins/casc.yaml
+++ b/jenkins/casc.yaml
@@ -61,7 +61,7 @@ credentials:
               description: "SSH private key file"
               privateKeySource:
                 directEntry:
-                  privateKey: "${SSH_PRIVATE_KEY}}" 
+                  privateKey: "${readFile:/certs/id_ed25519}"
 jobs:
   - script: >
       pipelineJob('test') {
