--- a/jenkins/casc.yaml
+++ b/jenkins/casc.yaml
@@ -50,6 +50,21 @@ credentials:
               description: "Secret Text"
           - string:
               scope: GLOBAL
+              id: "minio_endpoint"
+              secret: "${MINIO_ENDPOINT}"
+              description: "Secret Text"
+          - string:
+              scope: GLOBAL
+              id: "minio_access_key"
+              secret: "${MINIO_ACCESS_KEY}"
+              description: "Secret Text"
+          - string:
+              scope: GLOBAL
+              id: "minio_secret_key"
+              secret: "${MINIO_SECRET_KEY}"
+              description: "Secret Text"
+          - string:
+              scope: GLOBAL
               id: "jenkins-pub-key"
               secret: "${readFile:/certs/id_ed25519.pub}"
               description: "SSH public key file."
