add xoa_url do docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - XCP_MASTER_IP=${XCP_MASTER_IP}
       - XCP_USER=${XCP_USER}
       - XCP_PASSWORD=${XCP_PASSWORD}
+      - XOA_URL=${XOA_URL}
       - XOA_USER=${XOA_USER}
       - XOA_PASSWORD=${XOA_PASSWORD}
       - MINIO_ENDPOINT=${MINIO_ENDPOINT}
